# ccquant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: dbt.yml
config/: example.yaml
config/seeds/: twitter_accounts_seed.csv  wallet_identities_seed.csv  wallet_identity_links_seed.csv  wallet_registry_seed.csv
config/strategies/: btc_macro_long_only.yaml  btc_macro_ls.yaml  btc_ts_mom.yaml  cs_mom_btc_neutral.yaml  cs_mom_long_only.yaml  cs_mom_oi_regime.yaml  cs_mom_simple.yaml
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: normalize_wallet_address.sql  pivot_metrics.sql  source_priority_rank.sql
dbt/models/events/: _schema.yml  dim_events.sql
dbt/models/exposures/: forecasting.yml
dbt/models/marts/: _schema.yml  dim_assets.sql  dim_assets_history.sql  fct_cex_dex_basis.sql  fct_ohlcv_daily.sql  fct_ohlcv_hourly.sql  fct_open_interest.sql  fct_open_interest_agg.sql  fct_order_book_agg.sql  fct_order_book_snapshots.sql  fct_tweet_account_activity.sql  fct_tweet_alerts.sql  fct_tweet_mentions_daily.sql  fct_tweet_spike_events.sql  fct_tweet_wallet_mentions.sql  fct_wallet_alerts.sql  mart_mev_arb_daily.sql  mart_ops_freshness.sql  mart_signals_daily.sql
dbt/models/signals/: _schema.yml  fct_btc_insider_moves.sql  fct_btc_insider_timing.sql  fct_btc_wallet_counterparties.sql  fct_btc_wallet_holdings_daily.sql  fct_macro_series.sql  fct_onchain_signals.sql  fct_wallet_cabal_events.sql  fct_wallet_flows_daily.sql  fct_wallet_insider_clusters.sql  fct_wallet_signals_daily.sql  fct_wallet_smart_money.sql
dbt/models/staging/: _schema.yml  _sources.yml  stg_assets.sql  stg_dex_price_daily.sql  stg_macro_series.sql  stg_macro_sync_state.sql  stg_mev_boost_payloads.sql  stg_ohlcv_daily.sql  stg_ohlcv_hourly.sql  stg_onchain_series.sql  stg_onchain_sync_state.sql  stg_open_interest.sql  stg_order_book_snapshots.sql  stg_sync_state.sql  stg_tweet_alerts.sql  stg_tweet_entities.sql  stg_tweet_signals_daily.sql  stg_tweet_sync_state.sql  stg_tweets.sql  stg_twitter_accounts.sql  stg_wallet_alerts.sql  stg_wallet_identities.sql  stg_wallet_identity_links.sql  stg_wallet_positions_daily.sql  stg_wallet_registry.sql  stg_wallet_signals_daily.sql  stg_wallet_sync_state.sql  stg_wallet_transfers.sql
dbt/seeds/: events.csv  symbol_chain_map.csv
dbt/snapshots/: snap_assets.sql
dbt/tests/singular/: mart_signals_symbol_in_universe.sql  no_future_dates.sql  non_negative_volume_oi.sql
documentation/: API_Pricing.md  TestStrategies.md  Twitter_Import.md  Wallet_Discovery.md  dbt_conventions.md  strategy_research.md
notebooks/: BTC.ipynb  DEFI.ipynb  Eth.ipynb  MEV.ipynb  Macro.ipynb  Market_Tracker.ipynb  OnChain_BTC.ipynb  Strategy_Template.ipynb  Twitter_Signals.ipynb  Wallet_BTC.ipynb  Wallet_SOL.ipynb  btc.ipynb
scripts/: render_chart_images.py  run_strategy_ladder.py
src/ccquant/: __init__.py  cli.py  config.py  dashboard.py  etf_flows.py  forecasting.py  live_price.py  models.py  mom.py  onchain_fetch.py  sources.py  storage.py  sync.py
src/ccquant/strategy/: __init__.py  costs.py  evaluate.py  features.py  labels.py  portfolio.py  report.py  run.py  spec.py
src/ccquant/twitter/: __init__.py  accounts.py  alerts.py  enrich.py  import_csv.py  import_jsonl.py  sync.py  telegram.py
src/ccquant/wallet/: __init__.py  alerts.py  discovery.py  extract_bigquery.py  extract_solarchive.py  normalize.py  positions.py  seeds.py  sync.py  tail_arbitrum.py  tail_bitcoin.py  tail_solana.py
tests/: test_config.py  test_dashboard.py  test_etf_flows.py  test_forecasting.py  test_live_price.py  test_mom.py  test_onchain_fetch.py  test_sources.py  test_storage.py  test_strategy_template.py  test_sync.py  test_twitter_enrich.py  test_twitter_import.py  test_twitter_storage.py  test_wallet_bitcoin_normalize.py  test_wallet_bitcoin_positions.py  test_wallet_bitcoin_tail.py  test_wallet_config.py  test_wallet_storage.py
tests/fixtures/: seed_dbt_fixture.py
tests/fixtures/twitter/: sample_tweets.csv
