[project]
name = "ccquant"
version = "0.1.0"
description = "Lightweight crypto OHLCV data and forecasting research toolkit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.2.2",
  "httpx>=0.28.1",
  "polars>=1.30.0",
  "pyarrow>=24.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.2",
  "rich>=14.1.0",
  "typer>=0.16.1",
]

[project.scripts]
ccquant = "ccquant.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.0.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.12.12",
]
forecast = [
  "numpy>=2.2.0",
  "pandas>=2.2.3",
  "scikit-learn>=1.6.0",
  "statsmodels>=0.14.4",
]
notebook = [
  "ipykernel>=6.29.5",
  "jupyterlab>=4.3.0",
  "plotly>=6.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccquant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[dependency-groups]
dev = [
    "kaleido>=1.3.0",
]

